--- a/templates/apps/club/club_detail.html
+++ b/templates/apps/club/club_detail.html
@@ -29,7 +29,9 @@
                     </span>
                     <span>
                         {% if user_value != edit_club_access %}
-                        <button id="join-club-btn">Join Club</button>
+                        {% if edit_club_access != 1 %}
+                        <button class="btn btn-outline-info btn-sm" id="join-club-btn">Join Club</button>
+                        {% endif %}
                         {% endif %}
                     </span>
 
@@ -56,10 +58,17 @@
                                 <td class="text-center">{{ club_member_info.role }}</td>
                                 <td class="text-center">{{ club_member_info.power }}</td>
                                 <td class="text-center">
+                                    {% if edit_club_access %}
                                     <a href="#" class="btn btn-info btn-sm" id="sendBtn" data-bs-toggle="modal" data-bs-target="#sendModal" data-receiver-id="{{ club_member_info.user.id }}">
                                         <i>Send</i>
-                                    </a>                                    
-                                    <a href="#" class="btn btn-success btn-sm view_btn_file">
+                                    </a>     
+                                    {% else %}
+                                    <a href="#" class="btn btn-info btn-sm" style="opacity: .6;pointer-events: none;" id="" data-bs-toggle="modal" data-bs-target="" data-receiver-id="">
+                                        <i>Send</i>
+                                    </a>  
+                                    {% endif %}
+                                    {% if club_member_info.user == request.user %}
+                                    <a href="{% url 'tracking:tracking' %}" class="btn btn-success btn-sm view_btn_file">
                                         <i>View</i>
                                         {% if club_member_info.user == request.user %}
                                         <span class="badge bg-warning text-dark" id="fileTransferCount">
@@ -67,9 +76,16 @@
                                         </span>
                                         {% endif %}
                                     </a>
-                                    <a href="#" class="btn btn-danger btn-sm">
-                                        <i>Forward</i>
+                                    {% else %}
+                                    <a href=""  style="opacity: .6;pointer-events: none;" class="btn btn-success btn-sm view_btn_file">
+                                        <i>View</i>
+                                        {% if club_member_info.user == request.user %}
+                                        <span class="badge bg-warning text-dark" id="fileTransferCount">
+                                            {{ club_member_info.user.received_files.count }}
+                                        </span>
+                                        {% endif %}
                                     </a>
+                                    {% endif %}
                                 </td>                                                           
                             </tr>
                             {% endfor %}
@@ -95,7 +111,7 @@
                                 <form id="uploadForm" enctype="multipart/form-data">
                                     {% csrf_token %}
                                     <div class="row">
-                                        <div class="col-md-6" style="display: flex; flex-direction: column; justify-content: center;">
+                                        <div class="col-md-12" style="display: flex; flex-direction: column; justify-content: center;">
                                             <div class="mb-3">
                                                 <label for="file-input" class="form-label drop-container">
                                                     <span class="drop-title">Drop files here or click to upload</span>
@@ -104,19 +120,19 @@
                                                 </label>
                                             </div>
                                         </div>
-                                        <div class="col-md-6" style="display: flex; flex-direction: column; justify-content: center;">
+                                        <div class="col-md-12" style="display: flex; flex-direction: column; justify-content: center;">
                                             <div class="mb-3">
                                                 <input type="text" name="short_note" class="form-control" placeholder="Add a short note (optional)">
                                             </div>
                                             <div class="mb-3">
                                                 <select name="department" class="form-select" required>
                                                     <option value="" selected>Select Department</option>
-                                                    <option value="Administration">Administration</option>
+                                                    <option value="Department">Department</option>
                                                     <option value="Academics">Academics</option>
-                                                    <option value="Finance">Finance</option>
+                                                    <option value="User">User</option>
                                                 </select>
                                             </div>
-                                            <input type="text" name="receiver" id="receiverInput" value="">
+                                            <input type="hidden" name="receiver" id="receiverInput" value="" >
                                             <button type="button" id="uploadButton" class="btn btn-primary w-100">Upload File</button>
                                         </div>
                                     </div>
